sg-tier5.tf
# Security group for the web
resource "aws_security_group" "mgt" {
  name        = "mgt-tier5-sg"
  description = "Security group for RDP traffic from all subnets to mgt subnet for bastion host."
  vpc_id      = "${aws_vpc.default.id}"

  ingress {
    from_port   = 3389
    to_port     = 3389
    protocol    = "tcp"
    cidr_blocks = ["10.0.1.0/24", "10.0.2.0/24", "10.0.3.0/24", "10.0.4.0/27", "10.0.0.128/25"]
  }

  tags {
    Name          = "mgt-tier5-sg"
    Resource      = "SG"
    ResourceGroup = "asotelo-tf-rgp"
    Ecosystem     = ""
    Application   = ""
    Environment   = ""
  }
}
